--- a/src/main/resources/templates/page/service-visit.html
+++ b/src/main/resources/templates/page/service-visit.html
@@ -483,9 +483,9 @@
                             </td>
                             <th>모델</th>
                             <td>
-                                <select class="wPer" v-model="rsltToReg.pnMdlNo" :disabled='modiCallStCd==="E"'>
+                                <select class="wPer" v-model="pnMdlNoStor" :disabled='modiCallStCd==="E"'>
                                     <option value="all">선택</option>
-                                    <option v-for="device in devListByMkr" :value="device.pnMdlNo">{{device.pnMdlNm}} {{device.pnStor}}GB
+                                    <option v-for="device in devListByMkr" :value="device.pnMdlNo+'|'+device.pnStor">{{device.pnMdlNm}} {{device.pnStor}}GB
                                     </option>
                                 </select>
                             </td>
@@ -593,6 +593,9 @@
                 deviceList: [],              // 전체 디바이스 목록
                 devListByMkr: [],
                 selectedMkr: "",              // 개통결과등록레이어팝업 내에 제조사 항목
+                selectedCarrChg: false,
+                selectedMkrChg: false,
+                selectedMdlChg: false,
                 pnMkr: [
                     {code: "all", value: "선택"},
                     {code: "SAM", value: "삼성전자"},
@@ -619,18 +622,39 @@
                     }
                 },
             },
+            computed:{
+                pnMdlNoStor: {
+                    get: function(){
+                        return this.rsltToReg.pnMdlNo+'|'+this.rsltToReg.pnStor
+                    },
+                    set: function(newValue){
+                        if (newValue === 'all'){
+                            return 'all'
+                        } else {
+                            let keyword = newValue.split('|')
+                            this.rsltToReg.pnMdlNo = keyword[0]
+                            this.rsltToReg.pnStor= keyword[1]
+                        }
+                    }
+
+                    // if (this.selectedMkr === 'all'){
+                    //     if (this.selectedMkrChg === true){
+                    //         return 'all'
+                    //     }
+                    // } else if(this.selectedMdlChg === true){
+                    //     return this.rsltToReg.pnMdlNo+'|'+this.rsltToReg.pnStor
+                    // }
+                    // else {
+                    //     return this.rsltToReg.pnMdlNo+'|'+this.rsltToReg.pnStor
+                    // }
+                }
+            },
             components: {
                 vuejsDatepicker
             },
             mounted: function () {
                 this.getToday()
             },
-            // computed:{
-            //   dpOpenCss() {
-            //       if(this.selectedCs.callNo) return '1200px !important'
-            //       return '687px !important'
-            //   }
-            // },
             watch: {
                 'rsltToReg.mntCarr': {
                     handler(value) {
@@ -662,8 +686,12 @@
                                 break
                         }
                         if (value !== this.selectedCs.mntCarr) {
-                            this.rsltToReg.pnRegDis = "all"
-                            this.rsltToReg.pnMntRtNo = "all"
+                            this.selectedCarrChg = true
+                            if (this.selectedCarrChg === true){
+                                this.rsltToReg.pnRegDis = "all"
+                                this.rsltToReg.pnMntRtNo = "all"
+                            }
+
                         }
                         this.useMntrtListByCarr = tempArr
                     },
@@ -728,6 +756,7 @@
                     }
                     if (data !== this.selectedCs.pnMkr){
                         this.rsltToReg.pnMdlNo = 'all'
+                        this.selectedMkrChg = true  // 제조사 값 변경됨 - true
                     }
                     this.devListByMkr = tempArr
                 }
@@ -1016,15 +1045,38 @@
                             regType: this.rsltToReg.pnRegDis,
                             regMntRtNo: this.rsltToReg.pnMntRtNo,
                             regPnMdlNo: this.rsltToReg.pnMdlNo,
+                            regPnStor: this.rsltToReg.pnStor,
                             regPd: this.selectedPd,
                             dealCont: this.rsltTxt,
                             pnRegYn: 'Y',
                             callNo: this.rsltToReg.callNo
                         }
+                        if (param.regCarr === 'all') {
+                            alert('통신사를 선택해주세요.')
+                            return
+                        }
+                        if (param.regType === 'all') {
+                            alert('가입유형을 선택해주세요.')
+                            return
+                        }
+                        if (param.regMntRtNo === 'all'){
+                            alert('요금제를 선택해주세요.')
+                            return
+                        }
                         if (!this.selectedPd){
                             alert('약정기간을 선택해주세요.')
                             return
                         }
+                        if (this.selectedMkr === 'all'){
+                            alert('제조사를 선택해주세요.')
+                            return
+                        }
+                        if (this.pnMdlNoStor === 'all'){
+                            alert('모델을 선택해주세요.')
+                            return
+                        }
+
+
                     } else if (this.modiCallStCd === 'E') {
                         param = {
                             bnMbrId: this.rsltToReg.bnMbrId,
@@ -1044,7 +1096,8 @@
                         return
                     }
                     if(confirm('개통결과를 등록하시겠습니까?')){
-                        cf_call("/service/registerRslt", param, this.registerRsltCB)
+                        console.log(param)
+                        // cf_call("/service/registerRslt", param, this.registerRsltCB)
                     }
 
                 },
